<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Makac</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracker">TrackerActivity</string>

    <!-- button labels -->
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="resume_button">Resume</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>

    <!-- name of labels -->
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="pace">Pace</string>
    <string name="calories">Calories</string>

    <!-- name of variables -->
    <string name="time_var">00:00:0</string>
    <string name="distance_var">0.0</string>
    <string name="pace_var">0.0</string>
    <string name="calories_var">0</string>

    <!-- name of units labels -->
    <string name="km_unit">km</string>
    <string name="min_km_unit">min/km</string>
    <string name="kcal_unit">kcal</string>

    <!-- name of for SummaryActivity -->
    <string name="total_distance">Total distance</string>
    <string name="total_duration">Total duration</string>
    <string name="total_pace">Total pace</string>
    <string name="total_calories">Total calories</string>
    <string name="back">Back</string>
    <string name="Share">Share</string>

</resources>