<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.makac.TrackerActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/distance"
        android:layout_below="@+id/textView1"
        android:text="@string/time_var"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textsizeTime" />

    <View
        android:id="@+id/View01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/duration"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/View01"
        android:text="@string/distance"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:text="@string/distance_var"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textsizeTime" />

    <View
        android:id="@+id/View02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/distance"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View02"
        android:text="@string/pace"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/pace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/distance"
        android:layout_below="@+id/textView3"
        android:text="@string/pace_var"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textsizeTime" />

    <View
        android:id="@+id/View03"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/pace"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/View03"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="9dp"
        android:text="@string/calories_var"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textsizeTime" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View02"
        android:layout_marginLeft="65dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/calories"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distance"
        android:layout_alignBottom="@+id/distance"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/km_unit"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pace"
        android:layout_alignBottom="@+id/pace"
        android:layout_alignLeft="@+id/textView"
        android:text="@string/min_km_unit"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/kcal_unit"
        android:textSize="@dimen/textsize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:width="235dip"
            android:height="200dip"
            android:onClick="onStartClicked"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/reset_button"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/start_button"
            android:width="100dip"
            android:height="200dip"
            android:onClick="onPauseClicked"
            android:text="@string/pause_button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start_button"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/start_button"
            android:width="100dip"
            android:height="200dip"
            android:onClick="onStopClicked"
            android:text="@string/stop_button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/resume_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start_button"
            android:layout_alignTop="@+id/start_button"
            android:width="100dip"
            android:height="200dip"
            android:onClick="onResumeClicked"
            android:text="@string/resume_button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/start_button"
            android:layout_alignTop="@+id/start_button"
            android:width="100dip"
            android:height="200dip"
            android:onClick="onResetClicked"
            android:text="@string/reset_button"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>